force-app/main/default/objects/PromotionOpportunity__c/PromotionOpportunity__c.object-meta.xml
<CustomObject>
    <label>Promotion Opportunity</label>
    <nameField>
        <displayFormat>POP-{000000}</displayFormat>
        <label>Promotion Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PromotionOpportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>