force-app/main/default/objects/PromotionOpportunity__c/fields/IsDelete__c.field-meta.xml
<CustomField>
    <fullName>IsDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDelete</label>
    <type>Checkbox</type>
</CustomField>