force-app/main/default/objects/PromotionOpportunity__c/fields/PromotionMaster__c.field-meta.xml
<CustomField>
    <fullName>PromotionMaster__c</fullName>
    <description>Promotion ที่ถูกใช่คือ promotion ใด</description>
    <label>Promotion Master</label>
    <referenceTo>PromotionMaster__c</referenceTo>
    <relationshipLabel>Promotion Opportunities</relationshipLabel>
    <relationshipName>Promotion_Opportunities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>